# clickhouse_optimization_e-comet.io

./: .env.template  Dockerfile  Makefile  README.md  clickhouse_server.py  docker-compose.yml  fake_data.py  main.py  pyproject.toml  requirements.txt
fake_data/: fake_data.py
optimization_sql_for_clickhouse/: .env.dockerfile  Dockerfile  logger.py  main.py  pyproject.toml
python_script_to_first_task/: func.py
sql_queries/: create_tables.py  select_queries.py
