[tool.poetry]
name = "clickhouse-optimization-e-comet-io"
version = "0.1.0"
description = ""
authors = ["dima <pieero47@gmail.com>"]
readme = "README.md"
packages = [{include = "clickhouse_optimization_e_comet"}]

[tool.poetry.dependencies]
python = "^3.11"
faker = "^25.9.1"
python-dotenv = "^1.0.1"
clickhouse-driver = "^0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
